Upgrade AB3 to Java25
Allow ab3 to run with JVM 25
Additionally, update certain libraries and dependencies